--- a/MAUITest/TabbedPageDemo.xaml
+++ b/MAUITest/TabbedPageDemo.xaml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUITest.TabbedPageDemo"
-             Title="Tabbed Page Demo">
+<TabbedPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MAUITest.TabbedPageDemo"
+    Title="Tabbed Page Demo"
+    Background="DarkBlue"
+    BarTextColor="LightSalmon"
+    SelectedTabColor="DarkRed"
+    UnselectedTabColor="DarkKhaki"
+    >
+    
 
-    <ContentPage Title="Page 1"></ContentPage>
-    <ContentPage Title="Page 2"></ContentPage>
-    <ContentPage Title="Page 3"></ContentPage>
+    <ContentPage Title="Page 1"
+                 BackgroundColor="Aqua"
+                 IconImageSource="dotnet_bot.svg">
+                 <Label
+                     Text="Page 1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"                     
+                     />
+        </ContentPage>
+
+    <ContentPage Title="Page 2"
+                 BackgroundColor="Beige"
+                 IconImageSource="dotnet_bot.svg">
+        <Label
+                     Text="Page 2"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"                     
+                     />
+    </ContentPage>
+
+    <ContentPage Title="Page 3"
+                 BackgroundColor="Coral"
+                 IconImageSource="dotnet_bot.svg">
+        <Label
+                     Text="Page 3"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"                     
+                     />
+    </ContentPage>
 
 </TabbedPage>
