--- a/MAUITest/PresentationControlsDemo.xaml
+++ b/MAUITest/PresentationControlsDemo.xaml
@@ -3,27 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.PresentationControlsDemo"
              Title="PresentationControlsDemo">
-    <VerticalStackLayout>
-        <BoxView
+
+    <ScrollView>
+        <VerticalStackLayout Spacing="5">
+            <BoxView
             Color="Green"
             HeightRequest="200"/>
 
-        <Ellipse
+            <Ellipse
             Margin="0,-100,0,0"
             Fill="Yellow"
             HeightRequest="200"
             WidthRequest="200"
             Stroke="Red"
             StrokeThickness="10"/>
-        
-        <Label
+
+            <Label
             Text="Andres Velez"
             TextColor="Black"
             FontSize="Title"
             FontAttributes="Bold"
             HorizontalTextAlignment="Center"/>
 
-        <Line
+            <Line
             Stroke="Purple"
             StrokeThickness="5"
             X1="0"
@@ -31,8 +33,79 @@
             X2="500"
             Y2="0"/>
 
+            <Rectangle
+            Fill="Aqua"
+            HeightRequest="50"
+            WidthRequest="150"
+            Stroke="Black"
+            StrokeThickness="5"
+            RadiusX="10"
+            RadiusY="10"
+            HorizontalOptions="End"/>
+            <HorizontalStackLayout HorizontalOptions="Center">
+                <Polygon
+            Fill="LightBlue"
+            Points="40,10 70,80 10,50"
+            Stroke="DarkBlue"
+            StrokeThickness="5"/>
+
+                <Polygon
+            Fill="Yellow"
+            Points="40,10 70,80 10,50"
+            Stroke="Green"
+            StrokeDashArray="1,1"
+            StrokeDashOffset="6"
+            StrokeThickness="5"/>
+            </HorizontalStackLayout>
+
+            <Polyline
+                Points="0,0 10,30 15,0 18,60 23,30 35,30 40,0 43,60 48,30 100,30"
+                Stroke="Red"/>
+
+            <Polyline
+                Points="0 48, 0 144, 96 150, 100 0, 192 0, 192 96, 50 96, 48 192, 150 200 144 48"
+                Fill="Blue"
+                Stroke="Red"
+                StrokeThickness="3" />
+
+            <Path
+                Aspect="Uniform"
+                Data="M 10,100 L 100,100 100,50Z"
+                HorizontalOptions="Center"
+                Fill="#44ffba"
+                Stroke="Black"/>
+
+            <Border
+                Stroke="#C49B33"
+                StrokeThickness="4"
+                Background="#2B0B98"
+                Padding="16,8"
+                HorizontalOptions="Center">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="40,0,0,40" />
+                </Border.StrokeShape>
+                <Label
+                    Text="Welcome to .NET MAUI!"
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center" 
+                    TextColor="White"/> 
+            </Border>
+
+            <Frame
+                Margin="15"
+                BackgroundColor="Yellow"
+                Padding="20">   
+                <Image Source="dotnet_bot.svg"/>
+            </Frame>
+
+            <WebView
+                HeightRequest="500"
+                Source="https://www.google.com/"/>
 
 
 
-    </VerticalStackLayout>
+
+        </VerticalStackLayout>
+    </ScrollView>
+    
 </ContentPage>
