--- a/MAUITest/CommandsControlsDemo.xaml
+++ b/MAUITest/CommandsControlsDemo.xaml
@@ -2,11 +2,91 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.CommandsControlsDemo"
-             Title="CommandsControlsDemo">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Commands Controls Demo">
+    <ScrollView>
+        <VerticalStackLayout
+        Spacing="10"
+         VerticalOptions="Center" >
+
+
+            <Button 
+            x:Name="btnTest"
+            Text="Click me!"
+            Clicked="btnTest_Clicked"   
+           />
+
+            <ImageButton
+            Source="dotnet_bot.svg"
+            Clicked="btnTest_Clicked" />
+
+            <Frame>
+                <VerticalStackLayout>
+                    <RadioButton
+                    GroupName="Genero"
+                    Content="Hombre"
+                    />
+
+                    <RadioButton
+                    GroupName="Genero"
+                    Content="Mujer"
+                    />
+
+                    <RadioButton
+                    GroupName="Genero"
+                    Content="No binario"
+                    />
+                </VerticalStackLayout>
+            </Frame>
+
+            <Frame>
+                <VerticalStackLayout>
+                    <RadioButton                 
+                    GroupName="Equipo"
+                    Content="NACIONAL"
+                    />
+
+                    <RadioButton
+                    
+                    GroupName="Equipo"
+                    Content="DIM"
+                    />
+                </VerticalStackLayout>
+            </Frame>
+
+            <SwipeView>
+                <SwipeView.LeftItems>
+                    <SwipeItems>
+                        <SwipeItem
+                            Invoked="SwipeItem_Invoked"
+                            IconImageSource="dotnet_bot.svg"
+                            BackgroundColor="LightGreen"
+                            Text="Favorite"
+                            />
+
+                        <SwipeItem
+                            Invoked="SwipeItem_Invoked"
+                            IconImageSource="dotnet_bot.svg"
+                            BackgroundColor="LightPink"
+                            Text="Deleteme"
+                            />
+                    </SwipeItems>
+                </SwipeView.LeftItems>
+                <Grid           
+                    HeightRequest="200"
+                    BackgroundColor="Silver">
+                    <Label
+                WidthRequest="300"                
+                FontSize="Title"
+                Text="Swipe Rigth!"
+                HorizontalTextAlignment="Center"/>
+
+
+                </Grid>
+            </SwipeView>
+            
+
+
+        </VerticalStackLayout>
+    </ScrollView>
+    
 </ContentPage>
