--- a/MAUITest/InputControlsDemo.xaml
+++ b/MAUITest/InputControlsDemo.xaml
@@ -2,11 +2,51 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.InputControlsDemo"
-             Title="InputControlsDemo">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="Input Controls Demo">
+    <VerticalStackLayout
+        VerticalOptions="Center" 
+            HorizontalOptions="CenterAndExpand" >
+
+        <HorizontalStackLayout>
+            <CheckBox IsChecked="True"/>
+            <Label 
+                VerticalOptions="Center"
+                FontAttributes="Bold"
+                FontSize="16"
+                Text="Es estudiante?"/>
+        </HorizontalStackLayout>
+
+        <Slider
+            x:Name="slider"
+            Minimum="0"
+            Maximum="100"
+            MinimumTrackColor="Green"
+            MaximumTrackColor="Purple"
+            WidthRequest="300"
+            ValueChanged="slider_ValueChanged"/>
+        <Label
+            x:Name="labelSlider"
+            FontAttributes="Bold"
+            FontSize="16"/>
+
+        <Stepper
+            x:Name="stepper"
+            Minimum="0"
+            Maximum="10"
+            Increment="2"
+            ValueChanged="stepper_ValueChanged"/>
+
+        <HorizontalStackLayout>
+            
+            <Label 
+                VerticalOptions="Center"
+                FontAttributes="Bold"
+                FontSize="16"
+                Text="Es estudiante?"/>
+            <Switch IsToggled="True"/>
+        </HorizontalStackLayout>
+        <DatePicker/>
+        <TimePicker/>
+
     </VerticalStackLayout>
 </ContentPage>
