--- a/MAUITest/TextControlsDemo.xaml
+++ b/MAUITest/TextControlsDemo.xaml
@@ -2,11 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.TextControlsDemo"
-             Title="TextControlsDemo">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
+             Title="Text Controls Demo">
+    <VerticalStackLayout
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center">
+
+        <Entry
+            Keyboard="Telephone"
+            Placeholder="Enter you phone number..."/>
+
+        <Editor
+            AutoSize="TextChanges"
+            />
     </VerticalStackLayout>
 </ContentPage>
