--- a/MAUITest/ActivityControlsDemo.xaml
+++ b/MAUITest/ActivityControlsDemo.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.ActivityControlsDemo"
-             Title="ActivityControlsDemo">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="Activity Controls Demo">
+    <VerticalStackLayout
+         VerticalOptions="Center" 
+            HorizontalOptions="Center">
+
+        <ActivityIndicator IsRunning="True"/>
+        <ProgressBar
+            WidthRequest="300"
+            Progress="0.5"/>
+
     </VerticalStackLayout>
 </ContentPage>
