List Collections Controls Demo

--- a/MAUITest/CollectionsControlsDemo.xaml
+++ b/MAUITest/CollectionsControlsDemo.xaml
@@ -2,11 +2,44 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.CollectionsControlsDemo"
-             Title="CollectionsControlsDemo">
+             Title="Collections Controls Demo">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <CarouselView>
+            <CarouselView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Colombia</x:String>
+                    <x:String>Perú</x:String>
+                    <x:String>Ecuador</x:String>
+                    <x:String>Bolivia</x:String>
+                    <x:String>Venezuela</x:String>
+                    <x:String>Panamá</x:String>
+                    <x:String>Argentina</x:String>
+                    <x:String>Brasil</x:String>
+                </x:Array>
+            </CarouselView.ItemsSource>
+
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout
+                        Margin="10">
+                        <Frame
+                        Padding="10"
+                        VerticalOptions="Center"
+                        Margin="10"
+                        BackgroundColor="Silver"
+                        HeightRequest="80"
+                        WidthRequest="200">
+
+                            <Label 
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            TextColor="Purple"
+                            Text="{Binding .}"/>
+                        </Frame>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+            
+        </CarouselView>
     </VerticalStackLayout>
 </ContentPage>
