--- a/MAUITest/BindingDemoTest/SliderPage.xaml
+++ b/MAUITest/BindingDemoTest/SliderPage.xaml
@@ -2,11 +2,20 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUITest.BindingDemoTest.SliderPage"
-             Title="SliderPage">
-    <VerticalStackLayout>
+             Title="Slider Page">
+    <VerticalStackLayout
+        VerticalOptions="Center" 
+            HorizontalOptions="Center">
+        
         <Label 
             Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            FontSize="30"
+            Rotation="{Binding Source={x:Reference slider}, Path=Value}"
+             />
+
+        <Slider
+            x:Name="slider"
+            Minimum="0"
+            Maximum="360"/>
     </VerticalStackLayout>
 </ContentPage>
