--- a/MAUITest/MVVM/Views/PeopleView.xaml
+++ b/MAUITest/MVVM/Views/PeopleView.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:MAUITest.MVVM.Converters"
              x:Class="MAUITest.MVVM.Views.PeopleView"
              Title="People View">
+
+    <ContentPage.Resources>
+        <converters:BoolConverter x:Key="boolConverter"/>
+    </ContentPage.Resources>
     <CollectionView 
         SelectionMode="Multiple"
         ItemsSource="{Binding People}">
@@ -30,7 +35,7 @@
                                 Text="{Binding Weigth, StringFormat='Peso: {0}'}"/>
 
                             <Label
-                                Text="{Binding IsMarried, StringFormat='Casado: {0}'}"/>
+                                Text="{Binding IsMarried, Converter={StaticResource boolConverter}, StringFormat='Casado: {0}'}"/>
 
                         </VerticalStackLayout>
                         
